<resources>
    <string name="app_name">Movist</string>
    <string name="title_application_logo">Application Logo</string>
    <string name="title_goto_fav_mov">Button goto menu favorite movie</string>
    <string name="title_category">Category</string>
    <string name="title_movie_image">Movie Image</string>
    <string name="dummy_date">xx-xx-xxxxx</string>
    <string name="dummy_title">Movie Title</string>
    <string name="dummy_description">Movie Description</string>
    <string name="title_button_love_favorite">Button love favorite</string>
    <string name="title_line_bottom_sheet">Line Bottom Sheet</string>
    <string name="title_select_category">Select Category</string>
    <string name="title_popular">Popular</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_top_rated">Top Rated</string>
    <string name="title_now_playing">Now Playing</string>
    <string name="title_banner_image">Banner Image</string>
    <string name="title_button_back">Button back</string>
    <string name="title_movie_caption">Movie Caption</string>
    <string name="title_genres">Genres</string>
    <string name="title_relase_date">Relase Date</string>
    <string name="title_runtime">Runtime</string>
    <string name="title_show_all">Show All</string>
    <string name="title_reviews">Reviews</string>
    <string name="title_overview">Overview</string>
    <string name="title_username">Username</string>
    <string name="dummy_rating">0.0</string>
    <string name="title_icon_star">Icon star</string>
    <string name="title_icon_profile">Icon profile</string>
    <string name="dummy_comments">Comments</string>
    <string name="title_there_is_no_review_yet">There is no review yet</string>
    <string name="dummy_genre">Genre</string>
    <string name="title_favorite_movie">Favorite Movie</string>
    <string name="title_image_empty_state">Image empty state</string>
    <string name="title_empty_favorite">Add Your Favorite Movies</string>
    <string name="subtitle_empty_favorite">Keep up to date the latest info from your favorite movie</string>
    <string name="title_show_movie_list">Show Movie List</string>
    <string name="title_icon_delete_favorite_movie">Icon delete favorite movie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>