<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    android:id="@+id/bottomSheet"
    android:paddingBottom="@dimen/margin_16"
    android:background="@color/white">

    <ImageView
        android:id="@+id/iv_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_line_bottom_sheet"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/title_line_bottom_sheet"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_select_category"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="@dimen/text_h3"
        android:textColor="@color/black_text"
        app:layout_constraintTop_toBottomOf="@id/iv_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_16"/>

    <TextView
        android:id="@+id/tv_popular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_popular"
        android:fontFamily="@font/poppins_regular"
        android:textSize="@dimen/text_normal"
        android:textColor="@color/curious_blue"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_20"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tv_upcoming"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_upcoming"
        android:fontFamily="@font/poppins_regular"
        android:textSize="@dimen/text_normal"
        android:textColor="@color/black_text"
        app:layout_constraintTop_toBottomOf="@id/tv_popular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_16"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tv_topRated"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_top_rated"
        android:fontFamily="@font/poppins_regular"
        android:textSize="@dimen/text_normal"
        android:textColor="@color/black_text"
        app:layout_constraintTop_toBottomOf="@id/tv_upcoming"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_16"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tv_nowPlaying"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_now_playing"
        android:fontFamily="@font/poppins_regular"
        android:textSize="@dimen/text_normal"
        android:textColor="@color/black_text"
        app:layout_constraintTop_toBottomOf="@id/tv_topRated"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_16"
        android:textAlignment="center"/>
</androidx.constraintlayout.widget.ConstraintLayout>