<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="@dimen/margin_12"
    android:id="@+id/cl_item">

    <ImageView
        android:id="@+id/iv_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_profile_blue"
        app:layout_constraintTop_toTopOf="@id/tv_username"
        app:layout_constraintBottom_toBottomOf="@id/tv_date"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/title_icon_profile"/>

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/iv_profile"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/title_username"
        android:textSize="@dimen/text_normal"
        android:textColor="@color/black_text"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginHorizontal="@dimen/margin_8"
        app:layout_constraintEnd_toStartOf="@id/rl_rating" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/iv_profile"
        app:layout_constraintTop_toBottomOf="@id/tv_username"
        android:text="@string/dummy_date"
        android:textSize="@dimen/text_sub"
        android:textColor="@color/black_text"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginStart="@dimen/margin_8"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rl_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingHorizontal="@dimen/margin_12"
        android:paddingVertical="@dimen/margin_4"
        android:background="@drawable/bg_button_dark_rounded_5dp">
        <ImageView
            android:id="@+id/iv_star"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_star"
            app:layout_constraintTop_toTopOf="@id/tv_rating"
            app:layout_constraintBottom_toBottomOf="@id/tv_rating"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/title_icon_star"/>
        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_rating"
            android:textSize="@dimen/text_normal"
            android:textColor="@color/yellow"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_star"
            android:layout_marginStart="@dimen/margin_4"
            android:textStyle="bold"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_review"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_date"
        android:text="@string/dummy_comments"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_12"
        android:maxLines="5"
        android:ellipsize="end"
        style="@style/DefaultContentDetail"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="0.5dp"
        android:background="@color/grey_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_review"
        android:layout_marginTop="@dimen/margin_12"/>

</androidx.constraintlayout.widget.ConstraintLayout>