<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    android:layout_marginBottom="@dimen/margin_12"
    android:id="@+id/cv_item">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_8">
        <ImageView
            android:id="@+id/iv_poster"
            android:layout_width="0dp"
            android:layout_height="@dimen/container_142"
            app:layout_constraintWidth_percent="0.3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/bg_button_grey_rounded_5dp"
            android:contentDescription="@string/title_movie_image"/>
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_h3"
            android:textColor="@color/black_text"
            android:text="@string/dummy_title"
            android:fontFamily="@font/poppins_semibold"
            app:layout_constraintStart_toEndOf="@id/iv_poster"
            android:layout_marginHorizontal="@dimen/margin_8"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ib_favorite"/>
        <ImageButton
            android:id="@+id/ib_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_love_active"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/title_button_love_favorite"/>
        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_normal"
            android:textColor="@color/black_text"
            android:text="@string/dummy_date"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintStart_toEndOf="@id/iv_poster"
            android:layout_marginHorizontal="@dimen/margin_8"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />
        <TextView
            android:id="@+id/tv_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_normal"
            android:textColor="@color/grey_text"
            android:text="@string/dummy_description"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintStart_toEndOf="@id/iv_poster"
            android:layout_marginHorizontal="@dimen/margin_8"
            app:layout_constraintTop_toBottomOf="@id/tv_date"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginVertical="@dimen/margin_8"
            android:maxLines="4"
            android:ellipsize="end"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>