<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.favorite.FavoriteActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_root"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/curious_blue"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/white">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageButton
                android:id="@+id/ib_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_baseline_arrow_back_24_white"
                android:contentDescription="@string/title_button_back"
                android:background="@color/curious_blue"
                android:layout_marginEnd="@dimen/margin_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_favorite_movie"
                style="@style/DefaultTopBar"
                app:layout_constraintStart_toEndOf="@id/ib_back"
                app:layout_constraintTop_toTopOf="@id/ib_back"
                app:layout_constraintBottom_toBottomOf="@id/ib_back"
                android:layout_marginHorizontal="@dimen/margin_16"/>
            <ImageButton
                android:id="@+id/ib_trash"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/title_icon_delete_favorite_movie"
                android:src="@drawable/ic_trash"
                android:background="@color/curious_blue"
                android:layout_marginEnd="@dimen/margin_16"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tb_root"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="@dimen/margin_16"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_emptyFavorite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tb_root"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="@dimen/margin_36">
        <ImageView
            android:id="@+id/iv_emptyState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_empty_favorite"
            android:contentDescription="@string/title_image_empty_state"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/tv_titleEmptyFav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_empty_favorite"
            android:textSize="@dimen/text_h2"
            android:textColor="@color/black_text"
            android:fontFamily="@font/poppins_medium"
            app:layout_constraintTop_toBottomOf="@id/iv_emptyState"
            android:layout_marginTop="@dimen/margin_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/tv_subtitleEmptyFav"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/subtitle_empty_favorite"
            android:textSize="@dimen/text_normal"
            android:textColor="@color/black_text"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintTop_toBottomOf="@id/tv_titleEmptyFav"
            android:layout_marginTop="@dimen/margin_8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="center"/>
        <Button
            android:id="@+id/btn_showMovie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_show_movie_list"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_normal"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintTop_toBottomOf="@id/tv_subtitleEmptyFav"
            android:layout_marginTop="@dimen/margin_12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>